--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <a href="https://www.instagram.com/oyee_ayush/"><i class="link fa-brands fa-instagram"></i></a>
-    <a href="https://twitter.com/Ayush_a_ray"><i class="link fa-brands fa-twitter"></i></a>
-    <a href="https://github.com/AyushRay06"><i class="link fa-brands fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/aditya-sahu-06494324a/"><i class="link fa-brands fa-linkedin"></i></a>
-    <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i class="link fa-solid fa-envelope"></i></a>
-    <a href="https://www.youtube.com/channel/UC_XmBMHyGRcF7EvKHtNPfWg"><i class="link fa-brands fa-youtube"></i></a>
+    <a href="https://www.instagram.com/oyee_ayush/"><i class="link insta fa-brands fa-instagram"></i></a>
+    <a href="https://twitter.com/Ayush_a_ray"><i class="link twitter fa-brands fa-twitter"></i></a>
+    <a href="https://github.com/AyushRay06"><i class="link github fa-brands fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/aditya-sahu-06494324a/"><i class="link linkedin fa-brands fa-linkedin"></i></a>
+    <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i class="link mail fa-solid fa-envelope"></i></a>
+    <a href="https://www.youtube.com/channel/UC_XmBMHyGRcF7EvKHtNPfWg"><i class="link youtube fa-brands fa-youtube"></i></a>
     <p>© Copyright TinDog</p>
 
   </footer>
