--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- Nav Bar -->
     <div class="container-fluid">
 
-        <nav class="navbar navbar-expand-lg navbar-dark hulu">
+        <nav class="main-nav navbar navbar-expand-lg navbar-dark hulu">
           <a class="navbar-brand" href="">Micro</a>
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                  <a class="nav-link"href="#features">Features</a>
+                  <a class="nav-link "href="#features">Features</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#testimonials">Testimonial</a>
