--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="a" src="images/techcrunch.png" alt="tc-logo">
+    <img class="a" src="images/TechCrunch.png" alt="tc-logo">
     <img class="a"src="images/tnw.png" alt="tnw-logo">
     <img class="a" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="a" src="images/mashable.png" alt="mashable-logo">
